--- a/package.json
+++ b/package.json
@@ -12,12 +12,10 @@
     "@sveltejs/adapter-auto": "next",
     "@sveltejs/kit": "next",
     "autoprefixer": "^10.4.4",
-    "flowbite-svelte": "^0.13.5",
     "postcss": "^8.4.12",
     "postcss-load-config": "^3.1.4",
     "svelte": "^3.44.0",
-    "svelte-preprocess": "^4.10.5",
-    "tailwindcss": "^3.0.23"
+    "svelte-preprocess": "^4.10.5"
   },
   "type": "module"
 }
